@@ -4,6 +4,7 @@ CHANGELOG
 UTIL:
 
 BUGFIX:
+* type=device | bugfix actions=display-shadowrule:file.html - to export correctly for all DG/vsys
 
 GENERAL
 
